@@ -6,17 +6,76 @@
       <applyto>/apps/gnome-system-log/logfile</applyto>
       <owner>logview</owner>
       <type>string</type>
-      <default></default>
+      <default>/var/log/messages</default>
       <locale name="C">
         <short>Log file to open up on startup</short>
-        <long>Specifies the log file to open up at startup.
+        <long>Specifies the log file displayed at startup.
 	      The default is either /var/adm/messages or 
 	      /var/log/messages, depending on your 
 	      operating system.
        </long>
       </locale>
       </schema>
+
+      <schema>
+      <key>/schemas/apps/gnome-system-log/fontsize</key>
+      <applyto>/apps/gnome-system-log/fontsize</applyto>
+      <owner>logview</owner>
+      <type>int</type>
+      <default>10</default>
+      <locale name="C">
+        <short>Size of the font used to display the log</short>
+        <long>Specifies the size of the fixed-width font used
+		to display the log in the main tree view.
+		The default is taken from the default gnome terminal
+		font size.
+       </long>
+      </locale>
+      </schema>
       
+      <schema>
+      <key>/schemas/apps/gnome-system-log/height</key>
+      <applyto>/apps/gnome-system-log/height</applyto>
+      <owner>logview</owner>
+      <type>int</type>
+      <default>400</default>
+      <locale name="C">
+        <short>Height of the main window in pixels</short>
+        <long>Specifies the height of the log viewer main window
+	in pixels.
+       </long>
+      </locale>
+      </schema>
+
+      <schema>
+      <key>/schemas/apps/gnome-system-log/width</key>
+      <applyto>/apps/gnome-system-log/width</applyto>
+      <owner>logview</owner>
+      <type>int</type>
+      <default>600</default>
+      <locale name="C">
+        <short>Width of the main window in pixels</short>
+        <long>Specifies the wifth of the log viewer main window
+	in pixels.
+       </long>
+      </locale>
+      </schema>
+
+      <schema>
+      <key>/schemas/apps/gnome-system-log/logfiles</key>
+      <applyto>/apps/gnome-system-log/logfiles</applyto>
+      <owner>logview</owner>
+      <type>list</type>
+      <list_type>string</list_type>
+      <locale name="C">
+        <short>Log files to open up on startup</short>
+        <long>Specifies a list of log files to open up at startup.
+	When this key is created, a default list is created by reading
+	/etc/syslog.conf.
+       </long>
+      </locale>
+      </schema>
+
   </schemalist>
   
 </gconfschemafile>
