@@ -1,3 +1,8 @@
+2005-11-18  Vincent Noel <vincent.noel@gmail.com>
+
+	* logview.schemas.in: Updated the schemas to include new keys,
+	  add default values.
+
 2005-11-17  Vincent Noel <vincent.noel@gmail.com>
 
 	* logrtns.c: (log_read_dates):
